# boids_benchmark

./: CMakeLists.txt  README.md  boids
data/: results.csv
scripts/: plot_results.py
src/: benchmark.cpp  benchmark.h  boids.cpp  boids.h  main.cpp  visualizer.cpp  visualizer.h
